syntax = "proto3";
package proto;
option go_package = "/proto/v1";
import "proto/v1/service.proto";

// number of tasks messages by type
message TasksStatus {
    int64 success = 1;
    int64 failed = 2;
    int64 returned = 3;
    int64 ready = 4;
    int64 rejected = 5;
}

// prometheus status
message PrometheusStatus {
    TasksStatus tasks_status = 1;
    int64 worker_count = 2;
    int64 consumer_count = 3;
}

// BackendService, between server and workers
service BackendService {
    // get the worker wanted state from the server
    rpc StreamServiceControl(ServiceStateValues) returns (stream ServiceStateValues);
    // stream tasks status to prometheus
    rpc StreamTasksStatus(stream PrometheusStatus) returns (stream PrometheusStatus);
}
