syntax = "proto3";
package proto;
option go_package = "/proto/v1";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";


message Host {
    string address = 1;
    string os_version = 2;
    string state = 3;
    string fqdn = 4;
}

message Script {
    string id = 1;
    repeated string output = 2;
}

message PortVersion {
   string low_version = 1;
   string high_version = 2;
   string extra_infos = 3;
   string product = 4;
   repeated Script scripts = 5;
   int32 confidence = 6;
}

message Port {
    string port_id = 1;
    string protocol = 2;
    string state = 3;
    string service_name = 4;
    PortVersion version = 5;
}

message HostResult {
    Host host = 1;
    repeated Port ports = 2;
}

message ScannerMainResponse {
    string key = 1;
    string user = 2;
    ParamsScannerRequest request = 3;
    repeated ScannerResponse response = 4;
    google.protobuf.Timestamp create_at = 5;
}

message ScannerResponse {
    string key = 1;
    google.protobuf.Timestamp start_time = 2;
    google.protobuf.Timestamp end_time = 3;
    google.protobuf.Duration retention_duration = 4;
    enum Status {
        UNKNOWN = 0;
        QUEUED = 1;
        RUNNING = 2;
        OK = 3;
        ERROR = 4;
        CANCEL = 5;
        TIMEOUT= 6;
      }
    Status status = 5;
    repeated HostResult host_result = 6;
}

message ParamsScannerRequest {
    string key = 1;
    string targets = 2;
    string ports = 3;
    google.protobuf.Timestamp defer_time = 4;
    int32 timeout = 5;
    bool with_aggressive_scan = 6;
    bool with_syn_scan = 7;
    bool with_null_scan = 8;
    bool service_version_detection = 9;
    bool os_detection = 10;
    bool service_default_scripts = 11;
    bool ping_only = 12;
    google.protobuf.Duration retention_duration = 13;
    bool fast_mode = 14;
    google.protobuf.Duration defer_duration = 15;
    int32 scan_speed = 16;
    string service_scripts = 17;
    bool use_tor = 18;
    string crontab = 19;
    bool process_per_target = 20;
    bool open_only = 21;
    bool network_chuncked = 22;
    string username = 23;
    string role = 24;
}

message GetScannerRequest {
    string key = 1;
}

message ServerResponse{
    bool success = 1;
    string key = 2;
    ScannerMainResponse value = 3;
    string error = 4;
}

message ServiceStateValues {
    enum ServiceState {
        UNKNOWN = 0;
        START = 1;
        STOP = 2;
    }
    ServiceState state = 1;
}

// Server ScannerService
service ScannerService {
    // start an async scan task
    rpc StartAsyncScan(ParamsScannerRequest) returns (ServerResponse) {};
    // start a scan task
    rpc StartScan(ParamsScannerRequest) returns (ServerResponse) {};
    // fetch a task result from database filter by key
    rpc GetScan(GetScannerRequest) returns (ServerResponse) {};
    // fetch all results from database
    rpc GetAllScans(google.protobuf.Empty) returns (stream ServerResponse) {};
    // delete a task entry from the database
    rpc DeleteScan(GetScannerRequest) returns (ServerResponse) {};
    // control the worker state
    rpc ServiceControl(ServiceStateValues) returns (ServiceStateValues) {};
}
